--- a/Road to Recovery/pages/ridePatForm.html
+++ b/Road to Recovery/pages/ridePatForm.html
@@ -155,9 +155,9 @@
                     pat: {
                         required: true
                     },
-                    patArabic: {
-                        required: true
-                    },
+                    //patArabic: {
+                    //    required: true
+                    //},
                     Origin: {
                         required: true
                     },
@@ -990,7 +990,7 @@
                                         <div class="row m-l-10 m-r-10">
                                             <div class="col-sm-6">
                                                 <div class="form-group">
-                                                    <label class="col-sm-2 control-label">اسم المريض&nbsp;<span class="required">*</span></label>
+                                                    <label class="col-sm-2 control-label">اسم المريض</label>
                                                     <div class="col-sm-6 ui-widget" id="selectPat">
                                                         <input type="text" id="patArabic" name="patArabic" class="form-control"></input>
                                                     </div>
@@ -1010,7 +1010,7 @@
                                         <div class="row m-l-10 m-r-10">
                                             <div class="col-sm-6">
                                                 <div class="form-group" id="escortDiv">
-                                                    <label class="col-sm-2 control-label">מלווים&nbsp;<span class="required">*</span></label>
+                                                    <label class="col-sm-2 control-label">מלווים</label>
                                                     <div class="col-sm-6" id="selectEscort">
                                                     </div>
                                                 </div>
