--- a/Road to Recovery/pages/patientForm.html
+++ b/Road to Recovery/pages/patientForm.html
@@ -862,7 +862,7 @@
                                         <div class="row m-l-10 m-r-10">
                                             <div class="col-sm-6">
                                                 <div class="form-group">
-                                                    <label class="col-sm-2 control-label">اسم شخصي&nbsp;<span class="required">*</span></label>
+                                                    <label class="col-sm-2 control-label">اسم شخصي</label>
                                                     <div class="col-sm-6">
                                                         <input id="firstA" name="firstA" type="text" class="form-control">
                                                     </div>
@@ -870,7 +870,7 @@
                                             </div>
                                             <div class="col-sm-6">
                                                 <div class="form-group">
-                                                    <label class="col-sm-2 control-label">اسم عائلة&nbsp;<span class="required">*</span></label>
+                                                    <label class="col-sm-2 control-label">اسم عائلة</label>
                                                     <div class="col-sm-6">
                                                         <input id="lastA" name="lastA" type="text" class="form-control">
                                                     </div>
@@ -1068,12 +1068,12 @@
                     phone1: {
                         required: true
                     },
-                    firstA: {
-                        required: true
-                    },
-                    lastA: {
-                        required: true
-                    },
+                    //firstA: {
+                    //    required: true
+                    //},
+                    //lastA: {
+                    //    required: true
+                    //},
                     city: {
                         required: true
                     }
@@ -1179,12 +1179,13 @@
                     phone1: {
                         required: "יש להכניס טלפון ראשי"
                     },
-                    firstA: {
-                        required: "أدخل الاسم الأول"
-                    },
-                    lastA: {
-                        required: "أدخل اسم العائلة"
-                    },
+                    //},
+                    //firstA: {
+                    //    required: "أدخل الاسم الأول"
+                    //},
+                    //lastA: {
+                    //    required: "أدخل اسم العائلة"
+                    //},
                     city: {
                         required: "יש להכניס יישוב"
                     }
