ViewRidePats performance improvements - moved to datatables

--- a/Road to Recovery/pages/viewRidePats.html
+++ b/Road to Recovery/pages/viewRidePats.html
@@ -311,7 +311,7 @@
 
                     //});
                 },
-                error: function (err) { alert("Error in GetRidePatView"); }
+                error: function (err) { alert("Error in GetRidePatView: " + err.responseText); }
             });
         }
 
