--- a/Road to Recovery/pages/index.html
+++ b/Road to Recovery/pages/index.html
@@ -184,7 +184,7 @@
             <!-- end content -->
             <!-- FOOTER -->
             <footer class="footer text-right">
-                2018 © Road to Recovery Management System by Matan Doron
+                2018 © כל הזכויות שמורות לעמותת בדרך להחלמה
             </footer>
             <!-- End FOOTER -->
 
