LogEntry and Location

--- a/Road to Recovery/pages/viewRidePats.html
+++ b/Road to Recovery/pages/viewRidePats.html
@@ -128,7 +128,7 @@
 
         function refreshTable() {
             checkCookie();
-            var active = JSON.parse(localStorage.active);//$("#activeRidePats").prop('checked');
+            //var active = JSON.parse(localStorage.active);//$("#activeRidePats").prop('checked');
             $("#activeRidePats").prop('checked',active);
             var today = JSON.parse(localStorage.today);//$("#TodaysRidePats").prop('checked');
             $("#TodaysRidePats").prop('checked',today);
