--- a/Road to Recovery/pages/volunteerForm.html
+++ b/Road to Recovery/pages/volunteerForm.html
@@ -1,4 +1,6 @@
-﻿<!DOCTYPE html>
+﻿
+
+<!DOCTYPE html>
 
 <html lang="en" dir=rtl>
 <head>
@@ -144,27 +146,27 @@
         //    // show loading message
         //    $("#jqGrid")[0].grid.beginReq();
 
-            //$.ajax({
-            //    dataType: "json",
-            //    url: "WebService.asmx/getCustomerAddresses",
-            //    contentType: "application/json; charset=utf-8",
-            //    type: "POST",
-            //    data: JSON.stringify({ customerID: customerID }),
-            //    success: function (data) {
-            //        var arr_addresses = JSON.parse(data.d);
+        //$.ajax({
+        //    dataType: "json",
+        //    url: "WebService.asmx/getCustomerAddresses",
+        //    contentType: "application/json; charset=utf-8",
+        //    type: "POST",
+        //    data: JSON.stringify({ customerID: customerID }),
+        //    success: function (data) {
+        //        var arr_addresses = JSON.parse(data.d);
 
-            //        for (i in arr_addresses) {
-            //            addressesArrayData.push({
-            //                ID: arr_addresses[i].AddressID,
-            //                AddressName: arr_addresses[i].AddressName,
-            //                City: arr_addresses[i].CustomerCity.CityName,
-            //                Street: arr_addresses[i].Street,
-            //                Number: arr_addresses[i].Number,
-            //                ContactPerson: arr_addresses[i].ContactPerson,
-            //                ContactPhone: arr_addresses[i].ContactPhone,
-            //                Comments: arr_addresses[i].Comments
-            //            });
-            //        }
+        //        for (i in arr_addresses) {
+        //            addressesArrayData.push({
+        //                ID: arr_addresses[i].AddressID,
+        //                AddressName: arr_addresses[i].AddressName,
+        //                City: arr_addresses[i].CustomerCity.CityName,
+        //                Street: arr_addresses[i].Street,
+        //                Number: arr_addresses[i].Number,
+        //                ContactPerson: arr_addresses[i].ContactPerson,
+        //                ContactPhone: arr_addresses[i].ContactPhone,
+        //                Comments: arr_addresses[i].Comments
+        //            });
+        //        }
 
         //            // set the new data
         //            $("#jqGrid").jqGrid('setGridParam', { data: addressesArrayData });
@@ -181,7 +183,7 @@
 
 
         function loadPage() {
-            
+
             if (JSON.parse(GENERAL.VOLUNTEERS.getVolunteersList()).length != 0) {
                 arr_volunteer = JSON.parse(GENERAL.VOLUNTEERS.getVolunteersList());
                 if (arr_volunteer.func == "edit" || arr_volunteer.func == "show") {
@@ -420,17 +422,17 @@
                                         <h4 class="m-t-0 header-title"><b>פרטי מתנדב</b></h4>
                                         <!--<p class="text-muted font-13 m-b-30">
                                             יצירת, צפייה ועריכת מתנדב. לחץ על כפתור חזור בכדי לצפות בכל הלקוחות.-->
-                                            <br />
+                                        <br />
 
-                                            <div class="col-md-6 checkbox checkbox-primary text-left">
-                                                <input id="activeVolunteer" type="checkbox">
-                                                <label for="activeVolunteer">
-                                                    מתנדב פעיל
-                                                </label>
-                                            </div>
-                                            <div class="text-right m-b-30 m-r-15">
-                                                <button type="button" onclick="returnVolunteers()" class="btn btn-default waves-effect w-md m-b-5"><i class="ti-back-right m-r-5"></i>חזור</button>
-                                            </div>
+                                        <div class="col-md-6 checkbox checkbox-primary text-left">
+                                            <input id="activeVolunteer" type="checkbox">
+                                            <label for="activeVolunteer">
+                                                מתנדב פעיל
+                                            </label>
+                                        </div>
+                                        <div class="text-right m-b-30 m-r-15">
+                                            <button type="button" onclick="returnVolunteers()" class="btn btn-default waves-effect w-md m-b-5"><i class="ti-back-right m-r-5"></i>חזור</button>
+                                        </div>
                                         <p class="required">* שדה חובה</p>
                                         <div class="row m-l-10 m-r-10">
                                             <div class="col-sm-6">
@@ -453,7 +455,7 @@
                                         <div class="row m-l-10 m-r-10">
                                             <div class="col-sm-6">
                                                 <div class="form-group">
-                                                    <label class="col-sm-2 control-label">اسم شخصي&nbsp;<span class="required">*</span></label>
+                                                    <label class="col-sm-2 control-label">اسم شخصي&nbsp;</label>
                                                     <div class="col-sm-6">
                                                         <input id="firstA" name="firstA" type="text" class="form-control">
                                                     </div>
@@ -461,7 +463,7 @@
                                             </div>
                                             <div class="col-sm-6">
                                                 <div class="form-group">
-                                                    <label class="col-sm-2 control-label">اسم عائلة&nbsp;<span class="required">*</span></label>
+                                                    <label class="col-sm-2 control-label">اسم عائلة&nbsp;</label>
                                                     <div class="col-sm-6">
                                                         <input id="lastA" name="lastA" type="text" class="form-control">
                                                     </div>
@@ -662,10 +664,10 @@
                         required: true
                     },
                     firstA: {
-                        required: true
+                        required: false//first name in arabic not required
                     },
                     lastA: {
-                        required: true
+                        required: false//second name in arabic not required
                     }, city: {
                         required: true
                     }
